tests/baselines/reference/classWithMultipleBaseClasses.errors.txt
tests/cases/compiler/classWithMultipleBaseClasses.ts(18,7): error TS2420: Class 'D' incorrectly implements interface 'I'.
  Property 'foo' is missing in type 'D'.


==== tests/cases/compiler/classWithMultipleBaseClasses.ts (1 errors) ====
    class A {
        foo() { }
    }
    
    class B {
        bar() { }
    }
    
    interface I {
        baz();
    }
    
    interface J {
        bat();
    }
    
    
    class D implements I, J {
          ~
!!! error TS2420: Class 'D' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'foo' is missing in type 'D'.
        baz() { }
        bat() { }
    }
    
    interface I extends A, B {
    }